--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.6.16",
+    "sweetalert2-react-content": "^5.0.7",
     "swiper": "^8.4.5",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
